# QR_Core

./: .gitignore  .ourcolcon.sh.swp  CMakeLists.txt  CMakeLists.txt.amQnRT  OpenQTCreatorHere.bat  PullAllProjFromGit.sh  PushAllProjToGit.sh  README.md  READMEtom.md  TableOfContentsForQRCore.md  colcon.pkg  fullbuild.bash  fullbuild2.bash  fullbuild2.bat  fullbuild2.bat.bak  ourcolconrpi.bash  oursourcerpi.bash  packageqr.xml  qr_cmake_autos.cmake  qr_cmake_autos.cmake.bak
CGensaveFiles/: SavedOptions.txt
CGensaveFiles/cmakeGui/GenericConfig/: cgenCmakeCache.cmake
GeneratedFiles/: Cmake_For_Interface.in  Cmake_For_Interface.in.bak  Composable_Node_cpp.in  Composable_Node_hpp.in  Composable_Node_hpp.in.bak  Config.cgenM.in  Config.in  Config.in.bak  QR_LocationLin.in.bak  QR_Location_Lin.in  QR_Location_Lin.in.bak  QR_Location_Win.in  main_composable_nodes.in  main_simplecpp.in  main_single_node.cgenM.in  main_single_node.cgenM.sync-conflict-20220623-140537-TIXOFWH.in  main_single_node.in  oursourcebash.in  package.in  packagecpp.in  packageqr.in  packageros.in  qr_cmake_autos.cmake.in.bak  qr_cmake_autos.in  single_variable.in  testcgen.cgenM.in  testcgen.in  unit_test_cmakelists.in  unit_test_main.cgenM.sync-conflict-20220623-120515-FVUG2N3.in  unit_test_main.in  visibility_control.in  visibility_control.in.bak
Google_tests/lib/googletest/CMakeProject1/: CMakeLists.txt
cmake/: CgenCmakeConfigFunctions.cmake  QR_Core.cmake  QR_Location.cmake  QR_Location_Win.cmake  QR_PreSetup.cmake  QR_Targets.cmake
doc/: AEROS_NonQR_Target_Tutorial.md  AERTOS_TOOLS.md  AERTOS_concepts.md  CreatingTargetsAndLinks.md  CreatingTargetsAndLinks_old.md  Creating_an_AERTOS_project.md  Examples.md  Generate_project.md  Installation.md  InterfaceFiles.md  QR_PubSub_Tutorial.md  QR_Timers_Tutorial.md  SettingsFiles.md
doc/concepts/: Events.md  FSM.md  LoopObject.md  SimpleROSAO.md  SurrogateAO.md  SurrogateAO_old.md  Timers.md  UnitTesting.md  Utilities.md
doc/concepts/observers/: Sensors.md
doc/concepts/trash/: Events.md  Target_PC_Or_Embed.md  Timers.md  UnitTesting.md
doc/example/: sometest.md  world.md
doc/tools/: LaunchFiles.md  UploadDataToPC.md
include/my_composable_node/: Config.hpp
include/qr_core/: QR_Core.h  QR_DataAccessManagerNode.h  QR_DataSyncing.h  QR_Ticket.h  QR_rand.h  visibility_control.h
install_lin/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install_lin/qr_core/include/qr_core/msg/: rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  test.h  void_int64_changed.hpp
install_lin/qr_core/include/qr_core/srv/: int64_int64.h  int64_int64.hpp  void_int64.hpp
install_lin/qr_core/share/qr_core/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install_lin/qr_core/share/qr_core/cmake/: CgenCmakeConfigFunctions.cmake  MultiParameterTemplate.cmake  QR_Core.cmake  QR_Location_Lin.cmake  QR_Targets.cmake  QR_Targets_ROS2QT.cmake  QR_Targets_cppsimple.cmake  QR_Templates.cmake  ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_qr_core__rosidl_generator_cExport-release.cmake  export_qr_core__rosidl_generator_cExport.cmake  export_qr_core__rosidl_generator_cppExport.cmake  export_qr_core__rosidl_generator_pyExport-release.cmake  export_qr_core__rosidl_generator_pyExport.cmake  export_qr_core__rosidl_typesupport_fastrtps_cExport-release.cmake  export_qr_core__rosidl_typesupport_fastrtps_cExport.cmake  export_qr_core__rosidl_typesupport_fastrtps_cppExport-release.cmake  export_qr_core__rosidl_typesupport_fastrtps_cppExport.cmake  qr_cmake_autos.cmake  qr_coreConfig.cmake  qr_core__rosidl_generator_cExport-release.cmake  qr_core__rosidl_generator_cExport.cmake  qr_core__rosidl_generator_cppExport.cmake  qr_core__rosidl_typesupport_cExport-release.cmake  qr_core__rosidl_typesupport_cExport.cmake  qr_core__rosidl_typesupport_cppExport-release.cmake  qr_core__rosidl_typesupport_cppExport.cmake  qr_core__rosidl_typesupport_introspection_cExport-release.cmake  qr_core__rosidl_typesupport_introspection_cExport.cmake  qr_core__rosidl_typesupport_introspection_cppExport-release.cmake  qr_core__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install_lin/qr_core/share/qr_core/msg/: Test.idl  Test.json  VoidInt32Changed.idl  VoidInt32Changed.json  VoidInt64Changed.idl  VoidInt64Changed.json  VoidInt64Changed.msg
install_lin/qr_core/share/qr_core/srv/: Int32Int32.idl  Int32Int32.json  Int64Int64.idl  Int64Int64.json  Int64Int64_Request.msg  Int64Int64_Response.msg  SyncInt32.idl  SyncInt32.json  SyncInt32.srv  SyncInt64.idl  SyncInt64.json  SyncInt64.srv  VoidInt.idl  VoidInt.json  VoidInt.srv  VoidInt32.idl  VoidInt32.json  VoidInt64.idl  VoidInt64.json  VoidInt64.srv  VoidInt64_Request.msg  VoidInt_Request.msg
install_win/: setup.bat  setup.ps1
install_win/qr_core/include/qr_core/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  test.h  test.hpp
install_win/qr_core/include/qr_core/srv/: void_int.h  void_int.hpp
install_win/qr_core/lib/: qr_core__python.lib  qr_core__rosidl_generator_c.lib  qr_core__rosidl_typesupport_c.lib  qr_core__rosidl_typesupport_cpp.lib  qr_core__rosidl_typesupport_fastrtps_c.lib  qr_core__rosidl_typesupport_fastrtps_cpp.lib  qr_core__rosidl_typesupport_introspection_c.lib  qr_core__rosidl_typesupport_introspection_cpp.lib
install_win/qr_core/share/qr_core/: local_setup.bat  local_setup.dsv  package.bat  package.dsv  package.ps1  package.xml
install_win/qr_core/share/qr_core/cmake/: MultiParameterTemplate.cmake  QR_Core.cmake  QR_Location_Lin.cmake  QR_Targets.cmake  (+21 more)
msg/: VoidInt32Changed.msg  VoidInt64Changed.msg
src/: Int32Int32.srv  MyNode.cpp  main.cpp
srv/: Int64Int64.srv  VoidInt64.srv
(+274 files in other folders)
